fix layout on mobile

--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -1,5 +1,6 @@
 .Home {
   height: 100%;
+  padding: 0 1rem;
 
   &__landing {
     @include homeTextContainer;
@@ -9,7 +10,7 @@
     @include container;
     height: 100%;
     padding: 2rem 0;
-    display: flex;
-    justify-content: space-between;
+    white-space: nowrap;
+    overflow: auto;
   }
 }
